# LABdependLibs

./: .gitignore  mac_README.md  windows_ReadMe.md
baseLib/harfbuzz-5.2.0/docs/html/: deprecated-api-index.html  harfbuzz-hb-draw.html  harfbuzz-hb-font.html  harfbuzz.devhelp2
baseLibs/harfbuzz-5.2.0/: configure
baseLibs/harfbuzz-5.2.0/docs/html/: harfbuzz-hb-common.html  harfbuzz-hb-face.html  harfbuzz-hb-set.html  harfbuzz-hb-version.html  reference-manual.html
baseLibs/libffi-master/: .gitignore
coreLib/harfbuzz-5.2.0/docs/html/: api-index-5-0-0.html  api-index-full.html  harfbuzz-hb-buffer.html  harfbuzz-hb-ot-layout.html  harfbuzz-hb-shape-plan.html  harfbuzz-hb-unicode.html  index.html
coreLib/harfbuzz-5.2.0/test/subset/data/: Makefile.in
createAndroidLibs/: copyAllSO.js  copyAllSo.sh  copySo.sh  settings.gradle
createAndroidLibs/app/: build.gradle
createAndroidLibs/app/src/androidTest/java/com/pf/createAndroidLibs/: ExampleInstrumentedTest.java
createAndroidLibs/app/src/main/: AndroidManifest.xml
createAndroidLibs/app/src/main/java/com/pf/createAndroidLibs/: MainActivity.java
createAndroidLibs/app/src/main/res/values/: strings.xml  themes.xml
createAndroidLibs/app/src/main/res/values-night/: themes.xml
createAndroidLibs/gradle/wrapper/: gradle-wrapper.properties
freetype-master/: CMakeLists.txt
harfbuzz-5.2.0/docs/html/: harfbuzz-hb-blob.html  harfbuzz-hb-map.html  harfbuzz-hb-ot-color.html  harfbuzz-hb-subset.html
harfbuzz-5.2.0/src/: Makefile.in
pluginLibs/sqlite3/: CMakeLists.txt  main.cpp  readme.md
result/libHeaders/FFI/: ffi.h
result/libHeaders/hv/: hconfig.h
(+1 files in other folders)
